20160117 dholland	System/161 2.0.6 released.
20160117 dholland	util.c needs sys/types.h; from Nikhil Benesch.
20160116 dholland	Don't let the dropped input character messages flood.

20160114 dholland	System/161 2.0.5 released.
20160114 dholland	Fix a bug counting global-idle cycles.
20160114 dholland	Drop redundant columns in stat161 output.
20160114 dholland	Polish previous.
20160113 gwa		Make stat161's reporting interval adjustable.
20160113 gwa		Have stat161 report elapsed clock time per tick.
20160112 dholland	Print a message if the OS drops an input character.
20160108 dholland	Print why if disk geometry initializion fails.
20160105 dholland	Standardize and document the exit codes.
20160105 dholland	Allow K, M, etc. suffixes for disk/memory sizes.
20160105 dholland	Make the trace device reject (vs. ignore) invalid args.
20160105 dholland	Add -C option to supply device config arguments.

20151222 dholland	System/161 2.0.4 released.
20151222 dholland	Improve the way -X works.
20151222 dholland	Make trace161 -h output include the trace flag list.
20151222 dholland	Use shell printf instead of echo -n. Apparently Apple
........		still ships a broken sh whose echo prints literal "-n".
20151222 dholland	Apparently some Linux installs demand _GNU_SOURCE to
........		be allowed to see/use ftruncate.
20150808 dholland	Actually install the new prof.html. Sigh.
........		(issued as patch for 2.0.3)

20150804 dholland	System/161 2.0.3 released.
20150714 dholland	Fix the serial port FORCE logic meant to prevent
........		interrupt flapping. Thanks to Winnie Wu for a test
........		kernel and workload that reliably repeated the problem.
20150709 dholland	Recognize some obvious aliases for disk161 commands.
20150706 dholland	Add page on profiling to the manual.
20150706 dholland	Add dynamic profiling control to the trace device.
20150703 dholland	If profiling, write the profile out if we die().
20150703 dholland	Include seek times in disk activity trace output.
