@@ -153,6 +153,11 @@
 #define EMU_RES_UNKNOWN      12
 #define EMU_RES_UNSUPP       13
 
+struct emufs_handleinfo {
+	int eh_fd;
+	dev_t eh_dev;
+	ino_t eh_ino;
+};
 
 struct emufs_data {
 	int ed_slot;
@@ -165,7 +170,7 @@ struct emufs_data {
 	uint32_t ed_result;		/* result register */
 
 	/* Handles from ed_handle are indexes into here */
-	int ed_fds[MAXHANDLES];
+	struct emufs_handleinfo ed_handles[MAXHANDLES];
 
 	/* Timing stuff */
 	int ed_busy;			/* true if operation in progress */
@@ -233,26 +238,42 @@ errno_to_code(int err)
 	return EMU_RES_UNKNOWN;
 }
 
+/*
+ * Find an existing handle for this file (if any); otherwise allocate
+ * a new one. XXX: this table should really use some kind of lookup
+ * scheme and not linear search, although since MAXHANDLES is
+ * currently only 64 it doesn't matter that much.
+ */
 static
 int
-pickhandle(struct emufs_data *ed)
+pickhandle(struct emufs_data *ed, dev_t dev, ino_t ino)
 {
 	int i;
+	int empty = -1;
+
 	for (i=0; i<MAXHANDLES; i++) {
-		if (ed->ed_fds[i]<0) {
+		if (ed->ed_handles[i].eh_fd < 0) {
+			/* remember first unused handle */
+			if (empty < 0) {
+				empty = i;
+			}
+		}
+		else if (ed->ed_handles[i].eh_dev == dev && 
+			 ed->ed_handles[i].eh_ino == ino) {
 			return i;
 		}
 	}
-	return -1;
+	return empty;
 }
 
 static
 void
 emufs_openfirst(struct emufs_data *ed, const char *dir)
 {
+	struct stat sbuf;
 	int fd;
 
-	Assert(ed->ed_fds[EMU_ROOTHANDLE]<0);
+	Assert(ed->ed_handles[EMU_ROOTHANDLE].eh_fd < 0);
 
 	fd = open(dir, O_RDONLY);
 	if (fd<0) {
@@ -260,7 +281,15 @@ emufs_openfirst(struct emufs_data *ed, const char *dir)
 		    strerror(errno));
 		die();
 	}
-	ed->ed_fds[EMU_ROOTHANDLE] = fd;
+	if (fstat(fd, &sbuf) < 0) {
+		msg("emufs: slot %d: %s: fstat: %s", ed->ed_slot, dir,
+		    strerror(errno));
+		die();
+	}
+
+	ed->ed_handles[EMU_ROOTHANDLE].eh_fd = fd;
+	ed->ed_handles[EMU_ROOTHANDLE].eh_dev = sbuf.st_dev;
+	ed->ed_handles[EMU_ROOTHANDLE].eh_ino = sbuf.st_ino;
 
 	g_stats.s_memu++;
 }
@@ -271,7 +300,7 @@ emufs_open(struct emufs_data *ed, int flags)
 {
 	int handle;
 	int curdir;
-	struct stat sbuf;
+	struct stat sbuf, sbuf2;
 	int isdir;
 
 	if (ed->ed_iolen >= EMU_BUF_SIZE) {
@@ -284,14 +313,9 @@ emufs_open(struct emufs_data *ed, int flags)
 	HWTRACEL(DOTRACE_EMUFS, "emufs: slot %d: open %s: ", ed->ed_slot,
 			       ed->ed_buf);
 
-	handle = pickhandle(ed);
-	if (handle < 0) {
-		HWTRACE(DOTRACE_EMUFS, "out of handles");
-		return EMU_RES_NOHANDLES;
-	}
+	curdir = pushdir(ed->ed_handles[ed->ed_handle].eh_fd, ed->ed_handle);
 
-	curdir = pushdir(ed->ed_fds[ed->ed_handle], ed->ed_handle);
-
+ retry:
 	if (stat(ed->ed_buf, &sbuf)) {
 		if (flags==0) {
 			/* not creating; doesn't exist -> fail */
@@ -313,13 +337,47 @@ emufs_open(struct emufs_data *ed, int flags)
 			flags |= O_RDWR;
 		}
 	}
-	
-	ed->ed_fds[handle] = open(ed->ed_buf, flags, 0664);
-	if (ed->ed_fds[handle]<0) {
-		int err = errno;
-		HWTRACE(DOTRACE_EMUFS, "%s", strerror(err));
+
+	handle = pickhandle(ed, sbuf.st_dev, sbuf.st_ino);
+	if (handle < 0) {
+		HWTRACE(DOTRACE_EMUFS, "out of handles");
 		popdir(curdir);
-		return errno_to_code(err);
+		return EMU_RES_NOHANDLES;
+	}
+
+	if (ed->ed_handles[handle].eh_fd < 0) {
+		ed->ed_handles[handle].eh_fd = open(ed->ed_buf, flags, 0664);
+		if (ed->ed_handles[handle].eh_fd < 0) {
+			int err = errno;
+
+			HWTRACE(DOTRACE_EMUFS, "%s", strerror(err));
+			popdir(curdir);
+			return errno_to_code(err);
+		}
+		if (fstat(ed->ed_handles[handle].eh_fd, &sbuf2) < 0) {
+			int err = errno;
+
+			HWTRACE(DOTRACE_EMUFS, "fstat: %s", strerror(err));
+			popdir(curdir);
+			return errno_to_code(err);
+		}
+		/*
+		 * If we didn't get the same object we scoped out,
+		 * close and retry. This avoids allowing someone
+		 * manipulating symlinks under us to cause us to open
+		 * a second handle for the same file; that is mostly
+		 * harmless, but for the root dir it isn't, especially
+		 * when we finally get code to prohibit going outside
+		 * the root dir.
+		 */
+		if (sbuf2.st_dev != sbuf.st_dev ||
+		    sbuf2.st_ino != sbuf.st_ino) {
+			close(ed->ed_handles[handle].eh_fd);
+			ed->ed_handles[handle].eh_fd = -1;
+			goto retry;
+		}
+		ed->ed_handles[handle].eh_dev = sbuf.st_dev;
+		ed->ed_handles[handle].eh_ino = sbuf.st_ino;
 	}
 
 	popdir(curdir);
@@ -338,8 +396,8 @@ static
 uint32_t
 emufs_close(struct emufs_data *ed)
 {
-	close(ed->ed_fds[ed->ed_handle]);
-	ed->ed_fds[ed->ed_handle] = -1;
+	close(ed->ed_handles[ed->ed_handle].eh_fd);
+	ed->ed_handles[ed->ed_handle].eh_fd = -1;
 	HWTRACE(DOTRACE_EMUFS, "emufs: slot %d: close handle %d",
 		ed->ed_slot, ed->ed_handle);
 	g_stats.s_memu++;
@@ -360,7 +418,7 @@ emufs_read(struct emufs_data *ed)
 	HWTRACEL(DOTRACE_EMUFS, "emufs: slot %d: read %u bytes, handle %d: ",
 		 ed->ed_slot, ed->ed_iolen, ed->ed_handle);
 
-	fd = ed->ed_fds[ed->ed_handle];
+	fd = ed->ed_handles[ed->ed_handle].eh_fd;
 
 	lseek(fd, ed->ed_offset, SEEK_SET);
 	len = read(fd, ed->ed_buf, ed->ed_iolen);
@@ -405,7 +463,7 @@ emufs_readdir(struct emufs_data *ed)
 		return errno_to_code(err);
 	}
 
-	fd = ed->ed_fds[ed->ed_handle];
+	fd = ed->ed_handles[ed->ed_handle].eh_fd;
 
 	if (fchdir(fd)<0) {
 		int err = errno;
@@ -477,7 +535,7 @@ emufs_write(struct emufs_data *ed)
 	HWTRACEL(DOTRACE_EMUFS, "emufs: slot %d: write %u bytes, handle %d: ",
 		 ed->ed_slot, ed->ed_iolen, ed->ed_handle);
 
-	fd = ed->ed_fds[ed->ed_handle];
+	fd = ed->ed_handles[ed->ed_handle].eh_fd;
 
 	lseek(fd, ed->ed_offset, SEEK_SET);
 	len = write(fd, ed->ed_buf, ed->ed_iolen);
@@ -507,7 +565,7 @@ emufs_getsize(struct emufs_data *ed)
 	HWTRACEL(DOTRACE_EMUFS, "emufs: slot %d: handle %d length: ",
 		 ed->ed_slot, ed->ed_handle);
 
-	fd = ed->ed_fds[ed->ed_handle];
+	fd = ed->ed_handles[ed->ed_handle].eh_fd;
 	if (fstat(fd, &sb)) {
 		int err = errno;
 		HWTRACE(DOTRACE_EMUFS, "%s", strerror(err));
@@ -531,7 +589,7 @@ emufs_trunc(struct emufs_data *ed)
 	HWTRACEL(DOTRACE_EMUFS, "emufs: slot %d: truncate handle %d to %u: ",
 		 ed->ed_slot, ed->ed_handle, ed->ed_iolen);
 
-	fd = ed->ed_fds[ed->ed_handle];
+	fd = ed->ed_handles[ed->ed_handle].eh_fd;
 	if (ftruncate(fd, ed->ed_iolen)) {
 		int err = errno;
 		HWTRACE(DOTRACE_EMUFS, "%s", strerror(err));
@@ -555,7 +613,8 @@ emufs_op(struct emufs_data *ed, uint32_t op)
 	    default: break;
 	}
 
-	if (ed->ed_handle >= MAXHANDLES || ed->ed_fds[ed->ed_handle]<0) {
+	if (ed->ed_handle >= MAXHANDLES ||
+	    ed->ed_handles[ed->ed_handle].eh_fd < 0) {
 		return EMU_RES_BADHANDLE;
 	}
 
@@ -640,7 +699,9 @@ emufs_init(int slot, int argc, char *argv[])
 	ed->ed_result = 0;
 
 	for (i=0; i<MAXHANDLES; i++) {
-		ed->ed_fds[i] = -1;
+		ed->ed_handles[i].eh_fd = -1;
+		ed->ed_handles[i].eh_dev = 0;
+		ed->ed_handles[i].eh_ino = 0;
 	}
 
 	ed->ed_busy = 0;
